--- a/Cygwin-Bash-Runner.vcxproj.filters
+++ b/Cygwin-Bash-Runner.vcxproj.filters
@@ -13,12 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Github stuff">
+      <UniqueIdentifier>{d9e7eb01-74a3-4106-b33c-855c2bcb283e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Cygwin-Bash-Runner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -29,5 +35,19 @@
     <ClCompile Include="Cygwin-Bash-Runner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CygwinBashRunner1.bat">
+      <Filter>Github stuff</Filter>
+    </None>
+    <None Include="CygwinBashRunner2.bat">
+      <Filter>Github stuff</Filter>
+    </None>
+    <None Include="LICENSE">
+      <Filter>Github stuff</Filter>
+    </None>
+    <None Include="README.md">
+      <Filter>Github stuff</Filter>
+    </None>
   </ItemGroup>
 </Project>
