prettiness and "windows application"
not that windows application works as a setting or anything. Probably
because of the redirected output.

--- a/Cygwin-Bash-Runner.csproj
+++ b/Cygwin-Bash-Runner.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{51FB1928-E37D-4B49-AC06-C10DFFE9FF38}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Cygwin_Bash_Runner</RootNamespace>
     <AssemblyName>Cygwin-Bash-Runner</AssemblyName>
